<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FF3D00"
        android:fontFamily="@font/ubuntu_bold"
        android:padding="17dp"
        android:text="@string/update_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_editor_absoluteX="120dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <fragment
                android:id="@+id/mapView2"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_margin="17dp"
                tools:context=".MapsActivity" />


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_margin="17dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:fontFamily="@font/ubuntu"
                android:gravity="center"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/update_section_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/goToCreateUpdateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/inputs_background"
                android:fontFamily="@font/ubuntu"
                android:padding="17dp"
                android:text="@string/update_hint" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/caseStatusRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_margin="17dp" />


        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/doneBtn"
        style="@style/DoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/done_48px"
        app:tint="@color/app_icon_tint"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>